--- a/css/style.css
+++ b/css/style.css
@@ -248,20 +248,19 @@ a.btn.btn-default.bookRoom{ background:url(../images/bg.png) repeat; color: #fff
 
 /*Blogs*/
 .Blogs{ float:left; width:100%;padding:75px 0; background:#f0f7fd; margin-top: 57px;}
-.Blogs h2{ color:#07a4eb; font-size:38px; margin:0; text-transform:uppercase; text-align:center;}
+.Blogs h2{ color:#07a4eb; font-size:38px; margin:0; text-transform:uppercase; text-align:center; margin-top: 50%;}
 .Blogs h2 b{font-family:'paragonblack'; font-weight:normal}
 .Blogs p{ font-size:14px; color:#666666; margin-top:25px; text-align:center;letter-spacing: 1px; margin-bottom:0;}
 .homeBlogCol{ float:left; width:100%; margin-top:60px;}
-.homeBlogCol .mainBlogCol{ position:relative;}
+.homeBlogCol .mainBlogCol{ position:relative;height: 230px; overflow: hidden;}
 .homeBlogCol .mainBlogCol::before{border: 12px solid rgba(255, 255, 255, 0.42);content: "";left: 0;right: 0;bottom: 0;top: 0;position: absolute;opacity: 1;z-index: 9;}
-.blogText { position: absolute; background: rgba(253, 228, 40, 0.81); left: 30px;top: 40px; padding: 48px 20px 57px;width: 52%;    z-index: 999999;}
+.blogText { position: absolute; left: 18px; top: 19px; width: 412px; z-index: 999999;}
 .blogText h5{ color:#2d4e5d; font-size:16px; margin:0; line-height:28px; letter-spacing:1px; }
-.blogText a{ background:url(../images/bg.png) repeat; color:#fff; text-transform:uppercase; border:none; box-shadow:none; border-radius:0;-webkit-border-radius:0;    width: 100%;padding: 9px 12px; margin-top:50px;font-family:'paragonblack'; font-weight:normal; letter-spacing:1px;}
+.blogText a{ background:url(../images/bg.png) repeat; color:#fff; text-transform:uppercase; border:none; box-shadow:none; border-radius:0;-webkit-border-radius:0; border-radius: 5px; width: 100%;padding: 9px 12px; font-family:'paragonblack'; font-weight:normal; letter-spacing:1px;}
 .blogText a:hover{ color:#fde428;}
 .blogText p.bg-warning { background: #faf2b3; font-size: 12px;font-family: 'Open Sans', sans-serif;color: #323a45;
                          text-align: left; padding: 2px 9px; border:1px solid #fff;}
 .blogText p.bg-warning span.date {float: right;}
-.blogText.blueBox{ background:rgba(7, 164, 235, 0.78);}
 .blogText.blueBox h5{ color:#fff;}
 .blogText.blueBox p.bg-warning{background:#aaddf0;}
 .blogText.blueBox a{background:url(../images/yellow-bg.jpg) repeat; color:#07a4eb;}
@@ -377,7 +376,7 @@ a.btn.btn-default.bookRoom{ background:url(../images/bg.png) repeat; color: #fff
 .tick img { position: relative; top: 40%; transform: translateY(40%); -webkit-transform: translate(-9%);-ms-transform: translateY(-9%)}
 /*Blog Page*/
 .Blogs.mainBlog { background: #fff;padding: 0 0 60px; margin-top: 0;}
-.Blogs.mainBlog .homeBlogCol{  margin-top: 30px;}
+.Blogs.mainBlog .homeBlogCol{ margin-top: 30px; padding-bottom: 30px; border-bottom: 2px solid rgba(87, 200, 251, 0.36);}
 .blogPag{float:left; width:100%; text-align:center;}
 .pagination>li>a i {font-size: 16px;}
 
@@ -525,8 +524,32 @@ a.btn.btn-default.bookRoom{ background:url(../images/bg.png) repeat; color: #fff
 @media (max-width:639px){.welcome h1{ font-size: 19px;top: 12px;}.welcome{ min-height: 63px;}.welcome span.blueBG{ font-size: 16px;}.checkForm { background: rgba(255, 255, 255, 0.81) none repeat scroll 0 0;float: left; padding: 20px 0;width: 100%;
                          }.checkForm h4{ color: #07a4eb;float: none; font-size: 28px; padding: 0; text-align: center;text-transform: uppercase; width: 100%;}.checkForm h4 br {display: none;}.checkForm .form {width: 100%;}.amazingcarousel-list-wrapper{ width:100% !important;}#amazingcarousel-container-6 { padding: 0 10px;}.facilites{ background-image:none; background-color:#F0F7FD;}.faciltyThumb > img {width: auto;}.faciltyCol .col-xs-4 {width: 100%;}.faciltybtn { margin-bottom: 22px;margin-top: 21px;}.roomFaclity p{ display:none;}a.btn.btn-default.bookRoom{ font-size:10px; height: auto;}.ourRooms .carousel-caption h2 {font-size: 20px;}.history{ margin-top:25px;}.Blogs .row{ margin:0;}.blogText{ padding:17px 20px 37px;}.blogText h5{ font-size: 13px; line-height: 21px;}.blogText p.bg-warning{  width:100%;font-size: 10px; padding: 2px 3px;} .blogText p.bg-warning span.date{ display: inline-block;}.newsletter label{  float: none;text-align: center; width:100%;}.newsletter .form-inline .input-group {width: 100%;}.aboutHistory{ padding:40px 0 0;}.aboutHistory p{letter-spacing:0.4px;line-height:23px; font-size:13px;}.aboutMan{height:386px}.aboutHistory h2 , .aboutHistory h2 b{ font-size:24px;}.chef{ display:none;}.formCol .col-xs-6 {width: 100%;}.contactCol{padding:40px 0 0;}.headerTittle{ width:80%;}}
 
-@media (max-width:479px){.checkInfo .col-xs-6 { width: 100%;}.welcome { min-height: 52px;}.welcome h1{ font-size: 12px; top: 12px;}.welcome span.blueBG {font-size: 12px;}.checkInfo {float: left;width: 100%;}.whyKingdom h2 , .whyKingdom h2 small{ font-size:22px;}.whyKingdom { padding: 25px 0;}.roomInfo h3{font-size: 15px; margin: 10px 0 8px;}.roomInfo p{font-size: 12px;}.yellow-logo img { width: 71%;}.yellow-logo {margin-top: -22px;}#amazingcarousel-6 .amazingcarousel-text{ display: none;}.history h2{   font-size: 24px;}.history{ padding:45px 0;}.facilites h2 , .ourRooms h2{ font-size: 24px;}.faciltyCol{  margin-top: 20px;}.history , .ourRooms , .facilites{ padding: 40px 0;}.roomFaclity{ display:none;}a.btn.btn-default.bookRoom {font-size: 9px;  padding: 9px 4px;  text-transform: lowercase;letter-spacing: 0; height: auto;}.ourRooms .carousel-caption h2{font-size: 17px;}.ratings {margin-bottom: 0;}.ourRooms .carousel-caption { padding: 23px;}.blogText { padding: 17px 10px; top: 20px;width: 70%; left: 20px;}.blogText h5 { font-size: 12px;line-height: 18px;} .Blogs p{ margin-top: 5px;}.blogText a{ margin-top: 14px; font-size: 12px;}.socialIcons i{font-size: 18px;   margin-right: 14px;}.newsletter label{ font-size: 22px;}.footerContact{ background-size:20%;}.copyCol p, .copyCol a{ float: none; text-align: center;width: 100%;margin-bottom: 5px;}
-                         .aboutMan{ display:none !important;}.Feedback .carousel-inner .item img{ display:none;}.Feedback{ padding:30px 0;}.Feedback .carousel-inner .carousel-caption{ position:static; margin-top:0; font-size:14px; line-height:28px;}.Feedback .carousel-inner .col-xs-8 , .aboutHistory .col-xs-6{ width:100%;}.ourBrands img{ width:100%;}.cbp-l-filters-alignCenter .cbp-filter-item{ padding:10px 8px 8px; font-size:12px; margin-top:0;}.aboutHistory{ padding:40px 0;}.accomdation-caption{ padding:23px; } .ourRooms.accomdations .accomdationCol h2{font-size: 17px;}.headerTittle{font-size: 32px;}}
+@media (max-width:479px){
+    .checkInfo .col-xs-6 { width: 100%;}
+    .welcome { min-height: 52px;}
+    .welcome h1{ font-size: 12px; top: 12px;}
+    .welcome span.blueBG {font-size: 12px;}
+    .checkInfo {float: left;width: 100%;}
+    .whyKingdom h2 , .whyKingdom h2 small{ font-size:22px;}
+    .whyKingdom { padding: 25px 0;}.roomInfo h3{font-size: 15px; margin: 10px 0 8px;}
+    .roomInfo p{font-size: 12px;}.yellow-logo img { width: 71%;}
+    .yellow-logo {margin-top: -22px;}
+    #amazingcarousel-6 .amazingcarousel-text{ display: none;}
+    .history h2{   font-size: 24px;}.history{ padding:45px 0;}
+    .facilites h2 , .ourRooms h2{ font-size: 24px;}
+    .faciltyCol{  margin-top: 20px;}
+    .history , .ourRooms , .facilites{ padding: 40px 0;}
+    .roomFaclity{ display:none;}
+    a.btn.btn-default.bookRoom {font-size: 9px;  padding: 9px 4px;  text-transform: lowercase;letter-spacing: 0; height: auto;}.ourRooms .carousel-caption h2{font-size: 17px;}
+    .ratings {margin-bottom: 0;}
+    .ourRooms .carousel-caption { padding: 23px;}
+    .blogText { padding: 17px 10px; top: 20px;width: 70%; left: 20px;}
+    .blogText h5 { font-size: 12px;line-height: 18px;} 
+    .Blogs h2{
+        margin-top: 0;
+    }
+    .Blogs p{ margin-top: 5px;}.blogText a{ margin-top: 14px; font-size: 12px;}.socialIcons i{font-size: 18px;   margin-right: 14px;}.newsletter label{ font-size: 22px;}.footerContact{ background-size:20%;}.copyCol p, .copyCol a{ float: none; text-align: center;width: 100%;margin-bottom: 5px;}
+    .aboutMan{ display:none !important;}.Feedback .carousel-inner .item img{ display:none;}.Feedback{ padding:30px 0;}.Feedback .carousel-inner .carousel-caption{ position:static; margin-top:0; font-size:14px; line-height:28px;}.Feedback .carousel-inner .col-xs-8 , .aboutHistory .col-xs-6{ width:100%;}.ourBrands img{ width:100%;}.cbp-l-filters-alignCenter .cbp-filter-item{ padding:10px 8px 8px; font-size:12px; margin-top:0;}.aboutHistory{ padding:40px 0;}.accomdation-caption{ padding:23px; } .ourRooms.accomdations .accomdationCol h2{font-size: 17px;}.headerTittle{font-size: 32px;}}
 
 @media (max-width:360px){.accomdation-caption , .ourRooms .carousel-caption{ padding:35.4px 23px;}}
 @media (max-width:320px){.accomdation-caption, .ourRooms .carousel-caption{ padding: 23px;}}
@@ -536,6 +559,12 @@ a.btn.btn-default.bookRoom{ background:url(../images/bg.png) repeat; color: #fff
     background: url(../images/why-bg.jpg);
     width: 100%;
     float: left;
+}
+.tripify_header.summary{
+    background:none;
+}
+.tripify_header.summary .tr_header{
+    padding: 20px 0;
 }
 .tripify_header .logo img{
     margin-left: 20px;
@@ -787,12 +816,12 @@ div.grid_images_places li:hover .rig-text {
     transform: translateY(0px);
     opacity: 0.9;
 }
-div.grid_images_places .rig-cell {
+.rig-cell {
     display: block;
     position: relative;
     overflow: hidden;
 }
-div.grid_images_places span {
+.rig-cell span {
     top: 40%;
     display: block;
     position: absolute;
@@ -805,7 +834,7 @@ div.grid_images_places span {
     font-weight: bold;
     font-weight: normal!important;
 }
-div.grid_images_places span.rig-text {
+.rig-cell span.rig-text {
     left: 0;
     text-transform: capitalize;
     top: 70%;
@@ -835,4 +864,8 @@ span.or_block{
     height: 41px;
     font-size: 20px;
     font-weight: normal;
+}
+.slideFx.get-package ul.slideMenu li > button{
+    width: 300px;
+    margin-bottom: 60px;
 }
