--- a/css/style.css
+++ b/css/style.css
@@ -144,6 +144,9 @@ label.control-label{
 .row {
   margin-bottom: 2rem;
 }
+ul li{
+    list-style: none;
+}
 /*Header Navigation*/
 .header{ background:url(../images/location/headerBanner.jpg) no-repeat; background-size:cover; height:auto; position:relative;}
 .header div#navbar { padding: 0 1%; z-index:999; padding-right:0; }
@@ -923,4 +926,46 @@ span.or_block{
 .house-boat-page .get-quote .mcd-menu li a{
     padding: 0px 20px;
     height: 26px;
+}
+.topNavWrap {
+    float: left;
+    width: 100%;
+    height: 5%;
+    padding: 12px 0;
+    position: fixed;
+    z-index: 100;
+}
+.topNavWrap .navigationWrap {
+    float: left;
+    width: 100%;
+}
+.topNavWrap.notFrstScr .rightSignInWrap ul li {
+    border-right: 1px solid #ababab;
+}
+.topNavWrap .rightSignInWrap {
+    float: right;
+    width: auto;
+}
+.topNavWrap.notFrstScr .rightSignInWrap ul li {
+    border-right: 1px solid #ababab;
+}
+.topNavWrap .rightSignInWrap ul li {
+    float: left;
+    width: auto;
+    color: #fff;
+    font-size: 14px;
+    line-height: 14px;
+    font-weight: 100;
+    border-right: #505050 solid 1px;
+    padding: 2px 10px;
+    position: relative;
+}
+.topNavWrap .rightSignInWrap ul li a{
+    color: #515151;
+}
+.noBorderRight {
+    border-right: 0 !important;
+}
+.topNavWrap.notFrstScr .rightSignInWrap ul li a {
+    color: #ababab;
 }
